--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,10 +1,10 @@
 #footer {
-  /* position: fixed; */
+  position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
   background-color: white;
-  color: Black;
+  color: rgb(88, 110, 88);
   text-align: center;
   padding-top: 5px;
   padding-bottom: 5px;
